fix: [logo] made it bright in dark mode
- Thanks to Graphman (@mokaddem) for the help!

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -137,3 +137,6 @@
     color: var(--placeholder);
   }
   
+  [data-bs-theme="dark"] .navbar-logo {
+    filter: brightness(1000%);
+  }
